--- a/Challenge1/style.css
+++ b/Challenge1/style.css
@@ -33,6 +33,7 @@ body, html {
     margin-right: 19px;
     padding-right: 20px;
     font-family: Roboto, sans-serif;
+    color: #FFFFFF;
 }
 
 .date-number {
@@ -59,9 +60,11 @@ body, html {
 }
 
 .tdydeadlines, .updeadlines {
+
     width: 100%;
     max-width: 503px;
     margin-top: 20px;
+    
     height: 211px;
     margin-left: 19px;
 }
@@ -75,9 +78,11 @@ body, html {
     width: 503px;
     height: 62px;
     background-color: #9AEDF2;
+    
     border-radius: 20px;
     padding-left: 10px;
     padding-top: 15px;
+    color: #676767;
     opacity: 0.6;
 }
 
@@ -86,13 +91,13 @@ body, html {
     max-width: 429px;
     height: 67px;
     margin-left: 10px;
-    font-weight: 600;
-    opacity: 0.7;
+    font-weight: 700;
+    color:#364043;
 }
 
 p {
     font-size: 30px;
-    opacity: 0.6;
+    
 }
 
 .content {
